--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.5",
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "meilisearch": "^0.33.0",
