--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.4.0",
     "formik": "^2.4.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
